one more geometry

--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -118,14 +118,22 @@
   publisher={JSTOR}
 }
 
-@MISC{894509,
-    TITLE = {Expected value of sock pairs},
-    AUTHOR = {stumped (https://math.stackexchange.com/users/169207/stumped)},
-    HOWPUBLISHED = {Mathematics Stack Exchange},
-    NOTE = {URL:https://math.stackexchange.com/q/894509 (version: 2014-08-11)},
-    EPRINT = {https://math.stackexchange.com/q/894509},
-    URL = {https://math.stackexchange.com/q/894509}
+@misc{894509,
+    title = {Expected value of sock pairs},
+    author = {Stumped},
+    howpublished = {Mathematics Stack Exchange},
+    url = {https://math.stackexchange.com/q/894509}
 }
+
+@misc{1294,
+    title = {Mean minimum distance for N random points},
+    author = {George Lowther},
+    howpublished = {MathOverflow},
+    url = {https://mathoverflow.net/questions/1294},
+    year = {2009}
+}
+
+
 
 @book{wilf2013generatingfunctionology,
   title={generatingfunctionology},
@@ -279,6 +287,6 @@
   title={The Principia: mathematical principles of natural philosophy},
   author={Newton, Isaac},
   year={1999},
-  publisher={Univ of California Press}
+  publisher={University of California Press}
 }
 
