--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2156,6 +2156,46 @@ $\E(X) = 1$
 
 
 
+
+
+\begin{problem}
+Винни-Пух отмечает на отрезке единичной длины $n$ случайных равномерно распределённых точек.
+
+Какова вероятность того, что минимальное расстоение между точками будет больше $x$?
+\begin{sol}  
+Первое решение:
+
+Благоприятную конфигурацию точек, где все расстояния не меньше $x$, можно сопоставить 
+с расположением $n$ точек на отрезке длины $(1 - (n-1) x)$ путём вырезания кусочка длины $x$ после всех отмеченных точек, кроме самой правой точки. 
+
+Это соответствие сохраняет меру.
+
+Отсюда вероятность равна $(1 - (n-1) x)^n$.
+
+Второе решение \cite{1294}:
+
+Вместо непрерывного отрезка единичной длины рассмотрим колоду единичной толщины из большого числа $m$ очень тонких карт. 
+В колоде есть $n$ меченых карт. 
+
+Нам нужна вероятность того, что при случайной раздаче карт расстояние между соседними мечеными картами не меньше $x$. 
+Организуем случайную раздачу карт следующим образом. 
+Сначала хорошенько перемешаем колоду. 
+Затем разделим колоду на «голову» толщины $(1 - (n-1)x)$ и «хвост» толщины $(n-1)x$.
+Затем будет открывать карты из головы по одной.
+При появлении очередной меченой карты из головы выложим на стол стопку карт толщиной $x$ из хвоста.
+По окончании головы кладём оставшийся хвост. 
+
+В какой случае мы получим благоприятную конфигурацию с интервалами не меньше $x$ между мечеными картами?
+
+Если в хвосте не было меченых карт, то мы на выходе получим благоприятную конфигурацию.
+Если в хвосте было $b > 0$ меченных карт, то благоприятная конфигурация невозможна,
+так как невыданными останутся $(b - 1)$ блок, и в каком-то из блоков длины $x$ хвоста окажется две меченых карты.
+
+Вероятность отсутствия меченых карт в хвосте равна $(1 - (n-1)x)^n$. 
+\end{sol}
+\end{problem}
+
+
 \section{Великий Комбинатор}
 
 \begin{leftbar}
@@ -3260,16 +3300,21 @@ $f_Y(y) = \begin{cases}
 
 \begin{problem}
 Завтрашняя цена акции — случайная величина с функцией плотности  $f(x)=\frac{3}{4}
-\max \left\{x(2-x),0\right\}$.
+\max \left\{x (2-x), 0 \right\}$.
 \begin{enumerate}
 \item Постройте график функции плотности;
-\item Найдите функцию распределения Васиного дохода, средний доход и дисперсию дохода, если:
+\item Обозначим Васино благосостояние завтра величиной $Y$. 
+Найдите $\E(Y)$, $\Var(Y)$ и функцию распределения $Y$ в каждой из трёх ситуаций:
 \begin{enumerate}
-\item У Васи есть 10 акций;
-\item У Васи нет акций, но есть опцион-пут, дающий ему право продать одну акцию по цене 1.2 рубля;
-\item У Васи нет акций, но есть опцион-колл, дающий ему право купить одну акцию по цене 1 рубль.
+\item[A:] У Васи есть 10 акций;
+\item[B:] У Васи нет акций, но есть один опцион-пут на завтра со страйком $1.2$ рубля. 
+\item[C:] У Васи нет акций, но есть опцион-колл на завтра со страйком $1$ рубль. 
 \end{enumerate}
 \end{enumerate}
+Опцион-пут — это право продать одну акцию по страйк-цене. 
+Если страйк-цена опциона-пут ниже фактической цены акции, то опцион-пут бесполезен, нет смысла пользоваться правом. 
+Однако, если страйк-цена опциона-пут выше фактической цены акции, то опцион позволяет его владельцу получить прибыль. 
+Опцион-колл — это право купить одну акцию по страйк-цене. 
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3351,7 +3396,9 @@ X, \text{ если } X\geq a.\\
 который вскроет господин Бёттигер».
 
 
-Гёте оценивает поэму в $G$ фридрихсдоров, а Фивег — в $V$ фридрихсдоров. Величины $G$ и $V$ независимы и непрерывно распределены. 
+Гёте оценивает поэму в $G$ фридрихсдоров, а Фивег — в $V$ фридрихсдоров. 
+Величины $G$ и $V$ независимы и непрерывно распределены на отрезке $[0, 1]$, 
+не обязательно равномерно. 
 Величину $G$ Гёте передал Бёттигеру в запечатанном конверте. 
 
 \begin{enumerate}
@@ -4150,7 +4197,9 @@ f(y)=\begin{cases}
 \end{problem}
 
 \begin{problem}
-Оля и Юля пишут смс Маше. Оля отправляет Маше в среднем 5 смс в час. 
+Оля и Юля пишут смс Маше.
+Эти два потока смс являются независимыми Пуассоновскими потоками.
+Оля отправляет Маше в среднем 5 смс в час. 
 Юля отправляет Маше в среднем 2 смс в час. 
 \begin{enumerate}
   \item Какова вероятность того, что Маша получит ровно 6 смс за час?
@@ -6599,6 +6648,20 @@ f(y_1, y_2) = c \cdot \exp(-10y_1^2 - 16y_2^2 + 2y_1y_2 - 4 y_1).
 \end{sol}
 \end{problem}
   
+
+\begin{problem}
+Как сгенерировать случайную точку равномерно распределённую на сфере?
+
+  \begin{sol}
+    Есть разные варианты, например, можно сгенерировать три независимых стандартных нормальных величины, $x = (x_1, x_2, x_3)$.
+    А затем отнормировать их, $y = x / \norm{x}$.
+    В результате получится точка на сфере. 
+    Согласно аксиоматике Гершеля~— Максвелла, закон распределения вектора $x$ инвариантен к повороту.
+    Следовательно, результат нормировки на длину получается равномерным на сфере.
+  \end{sol}
+\end{problem}
+
+
 
 
 
