monk problem by duncker

--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -290,3 +290,13 @@
   publisher={University of California Press}
 }
 
+@article{duncker1945problem,
+  title={On problem-solving},
+  author={Duncker, Karl and Lees, Lynne S},
+  journal={Psychological monographs},
+  volume={58},
+  number={5},
+  pages={i},
+  year={1945},
+  publisher={American Psychological Association}
+}
