--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1846,7 +1846,7 @@ $\P({b}) = \P({a,b}) - \P({a}) = \P({b,c}) - \P({c}) = 0.5$
 
 \section{Начала Евклида}
 
-Про метод центра масс в геометрии можно прочитать \cite{rike2007mass}.
+Про метод центра масс в геометрии можно прочитать \autocite{rike2007mass}.
 
 % TODO: альтернативное название: Выйду ночью в плоскость с конём
 
@@ -2173,7 +2173,13 @@ $\E(X) = 1$
 
 Отсюда вероятность равна $(1 - (n-1) x)^n$.
 
-Второе решение \cite{1294}:
+Данное решение словами описывает взятие интеграла 
+\[
+\dots
+\]
+с заменой с единичным якобианом. 
+
+Второе решение \autocite{1294}:
 
 Вместо непрерывного отрезка единичной длины рассмотрим колоду единичной толщины из большого числа $m$ очень тонких карт. 
 В колоде есть $n$ меченых карт. 
@@ -2190,11 +2196,33 @@ $\E(X) = 1$
 
 Если в хвосте не было меченых карт, то мы на выходе получим благоприятную конфигурацию.
 Если в хвосте было $b > 0$ меченных карт, то благоприятная конфигурация невозможна,
-так как невыданными останутся $(b - 1)$ блок, и в каком-то из блоков длины $x$ хвоста окажется две меченых карты.
+так как невыданными останутся как минимум $(b - 1)$ блок, и в каком-то из блоков длины $x$ хвоста окажется как минимум две меченых карты.
 
 Вероятность отсутствия меченых карт в хвосте равна $(1 - (n-1)x)^n$. 
 \end{sol}
 \end{problem}
+
+
+\begin{problem}
+С молитвой во славу Будде монах\addtag{герои!монах} отправился на Фудзи в 7 утра и через 10 часов достиг вершины. 
+На следующий день в 7 утра он начал спускаться по тому же маршруту и через 10 часов вернулся в точку старта. 
+Монах шёл с переменной скоростью, иногда отдыхая на своём пути. 
+
+Верно ли, что на склоне Фудзи обязательно найдётся точка, в которой он был в одно и то же время при спуски и при подъёме?
+
+\begin{sol} 
+Графическое решение. Можно нарисовать в осях время суток и высота две кривых линии: кривую подъёма и кривую спуска. 
+Они обязательно пересекутся. 
+
+\begin{minipage}{0.8\linewidth}
+\includegraphics[width=7cm]{figure/monk_fudji_problem.jpg}  
+\end{minipage}
+
+Второе решение. Представим себе, что это два разных человека поднимались и спускались в один и тот же день. 
+Вероятно, впервые эта задача появляется в статье Дункера \autocite{duncker1945problem}.
+\end{sol}
+\end{problem}
+
 
 
 \section{Великий Комбинатор}
@@ -5337,7 +5365,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \section{Трюк Фейнмана и метод Крофтона}
 
 \begin{leftbar}
-  Трюк Фейнмана \cite{burg2024feynman} для нахождения интеграла $I$:
+  Трюк Фейнмана \autocite{burg2024feynman} для нахождения интеграла $I$:
   \begin{itemize}
     \item Вводим в искомый интеграл $I$ параметр $t$.
     \item Для нахождения интеграла $I(t)$ сначала находим более простой интеграл $I'(t)$.
