trump and biden sol

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1850,18 +1850,22 @@ $\P({b}) = \P({a,b}) - \P({a}) = \P({b,c}) - \P({c}) = 0.5$
 
 % TODO: альтернативное название: Выйду ночью в плоскость с конём
 
-% TODO: добавить задачу про монаха, идущего на гору Фудзи и вниз
-
 % TODO: добавить задачу про Плюк, три пепелаца и связь между ними
 
 
 
 \begin{problem}
 Байден и Трамп приходят в случайный момент времени от полуночи до часа ночи в Белый Дом независимо друг от друга.
-Байден ждёт $6$ минут, а Трамп — $15$ минут.
+Байден ждёт $10$ минут, а Трамп — $20$ минут.
 
 Какова вероятность того, что они застанут друг друга?
   \begin{sol}
+  \begin{minipage}{0.8\linewidth}
+    \includegraphics[width=7cm]{figure/trump_biden_meeting.png}
+  \end{minipage}
+  \[
+  \P(\text{встреча}) = \frac{60^2 - 0.5 \cdot 50^2 - 0.5 \cdot 40^2}{60^2} = \frac{31}{72}
+  \]
   \end{sol}
 \end{problem}
 
@@ -2015,16 +2019,18 @@ $\E(X) = 1$
 \end{problem}
 
 \begin{problem}
-Расстояние от пункта A до B автобус проходит за 2 мин, а пешеход — за 20 мин.
-Интервал движения автобусов 30 мин.
-Вы подходите в случайный момент времени к пункту A и отправляетесь в B пешком.
+Расстояние Жабино до Гадюкино автобус проходит за 2 мин, а пешеход — за 20 мин.
+Автобусы двигаются регулярно через каждые 30 минут и подбирают путников даже вне официальных остановок.
+
+Вы подходите в случайный момент времени к Жабино и отправляетесь в Гадюкино пешком.
 
 \begin{enumerate}
 \item Какова вероятность того, что в пути Вас догонит очередной автобус?
-\item Сколько в среднем времени Вы будете добираться, если проходящий мимо автобус обязательно Вас подбирает?
+\item Сколько в среднем времени Вы добирались, если известно, что часть пути Вы проделали на автобусе?
+\item Сколько в среднем времени нужно, чтобы добраться из Жабино в Гадюкино?
 \end{enumerate}
 \begin{sol}
-18/30, примерно 14 минут
+$\P(A) = 0.6$, $\E(X \mid A) = (2 + 20)/2 = 11$, $\E(X) = 0.6 \cdot 11 + 0.4 \cdot 20 = 14.6$ или $14$ минут и $36$ секунд.
 \end{sol}
 \end{problem}
 
@@ -2169,15 +2175,16 @@ $\E(X) = 1$
 Благоприятную конфигурацию точек, где все расстояния не меньше $x$, можно сопоставить 
 с расположением $n$ точек на отрезке длины $(1 - (n-1) x)$ путём вырезания кусочка длины $x$ после всех отмеченных точек, кроме самой правой точки. 
 
-Это соответствие сохраняет меру.
+Это соответствие сохраняет меру!
 
 Отсюда вероятность равна $(1 - (n-1) x)^n$.
 
-Данное решение словами описывает взятие интеграла 
+Данное решение можно формально записать с помощью интеграла
 \[
-\dots
+\int_0^{1 - (n-1)x} \int_{x_1}^{1 - (n-2)x} \dots \int_{x_{n-1}}^1 dx_1 \, dx_2 \, \dots \, dx_n.
 \]
-с заменой с единичным якобианом. 
+Интеграл берётся, например, заменой $y_1 = x_1$, $y_2 = x_2 - x_1$, \dots{ } с единичным якобианом. 
+Останется только умножить ответ на $n!$ так как в задаче не важен порядок точек.
 
 Второе решение \autocite{1294}:
 
