timothy chow easter egg problem

--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -300,3 +300,25 @@
   year={1945},
   publisher={American Psychological Association}
 }
+
+
+
+@misc{111069,
+    title = {Easter eggs carton puzzle},
+    author = {Hemant Agarwal},
+    howpublished = {Puzzling Stack Exchange},
+    url = {https://puzzling.stackexchange.com/questions/111069}
+}
+
+
+
+@misc{chow2010eggs,
+    title = {Easter eggs hunt puzzle},
+    author = {Timothy Chow},
+    year = {2010},
+    url = {https://timothychow.net/fair.pdf},
+    addendum = {Задача была опубликована в American mathematical monthly в октябре 2010.}
+}
+
+
+
