--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -241,7 +241,7 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 % https://tex.stackexchange.com/questions/562819/newcommand-with-single-and-double-argument-probability-function
 
 
-% To difficult for indpendent contributors :) 
+% To difficult for independent contributors :) 
 % \NewDocumentCommand\P{sO{}r()}{%
 %   \operatorname{\mathbb{P}}%
 %   \begingroup
@@ -918,6 +918,10 @@ p_{30} = \frac{364}{365}\cdot\frac{363}{365}\cdot\ldots\cdot\frac{332}{336}\appr
     Навешивание ожидания $\E()$ не изменяет константу, поэтому, $\P(\E(\P(\P(X=7)=0))=1) = 1$ и $\E(\E(\E(\P(\P(X=1)=1)))) = 0$.
   \end{sol}
 \end{problem}
+
+
+
+
 
 
 
@@ -4104,6 +4108,45 @@ $\E(X)=9$, $\Var(X)=1.2$
 
 
 \begin{problem}
+На огороде у Копатыча растут 15 яблонь в три ряда по пять деревьев. 
+На двух случайных яблонях яблоки уже сладкие, на остальных — кислые. 
+Крош и Ёжик соревнуются, кто первым найдёт сладкое яблоко. 
+
+Крош пробует по одному яблоку с каждой яблони, перебирая яблони по рядам, слева направо внутри каждого ряда. 
+Ёжик одновременно с Крошем пробует яблоки с той же скоростью, но в другом порядке:
+сначала пробует самую левую яблоню в каждом ряду, затем — вторую в каждом ряду и так далее. 
+
+\begin{enumerate}
+  \item У кого выше вероятность найти спелое яблоко первым?
+  \item Сколько яблок в среднем попробует Крош, когда обнаружит первое сладкое?
+  \item Сколько яблок в среднем попробует Ёжик, когда обнаружит первое сладкое?
+  \item Как изменятся ответы, если созрела только одна яблоня?
+\end{enumerate}
+
+  \begin{sol}
+\begin{enumerate}
+  \item Внезапное:
+  \[
+  \P(\text{Крош побеждает}) = \frac{12 + 10 + 9 + 7 + 3 + 2}{C^2_{15}} = 43/105.
+  \]
+  \[
+  \P(\text{Ёжик побеждает}) = \frac{12 + 10 + 7 + 6 + 3 + 1}{C^2_{15}} = 39/105.
+  \]
+  \[
+  \P(\text{ничья}) = \frac{15 + 5 + 4}{C^2_{15}} = 23/105.
+  \]
+  \item $(15 - 2) / 3 + 1 = 16/3$
+  \item $(15 - 2) / 3 + 1 = 16/3$
+  \item Вероятность ничьей будет равна $3/15$, вероятности победы будут равны по $6/15$, ожидаемое число съеденных яблок каждым игроком будет равно $(15 - 1) / 2 + 1 = 8$.
+\end{enumerate}
+
+Посмотреть можно обсуждение на форуме puzzling \autocite{111069} и исходную заметку Тимоти Чоу \autocite{chow2010eggs}.
+  \end{sol}
+\end{problem}
+
+
+
+\begin{problem}
   % это задача на применение идеи разложения в сумму в других ситуациях (!)
 \begin{enumerate}
   \item Найдите сумму $\sum_{k=1}^n 1/(k^2 + k)$.
@@ -4113,6 +4156,10 @@ $\E(X)=9$, $\Var(X)=1.2$
 
   \end{sol}
 \end{problem}
+
+
+
+
 
 
 
@@ -4191,10 +4238,6 @@ f(y)=\begin{cases}
 \end{enumerate}
 
 Замена $\dBin(n,p)$ на $\dPois(\lambda=np)$ дает погрешность не более $\min\{p,np^2\}$. \\
-
-
-
-
 
 
 \newpage
@@ -6268,6 +6311,16 @@ $\H(X) = 1 - \ln \lambda$, $\H(Y) \approx \H(X) + \ln n$.
 \end{sol}
 \end{problem}
   
+
+\begin{problem}
+
+\begin{sol}
+Для дискретной величины $\H(7X + 777) = \H(X)$. 
+Для величины с функцией плотности $\H(7X + 777) = \H(X) + \ln 7$.  
+\end{sol}
+\end{problem}
+
+
 
 
 
