--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -321,4 +321,29 @@
 }
 
 
+@article{gill2018elementary,
+  title={Elementary statistics on trial—the case of Lucia de Berk},
+  author={Gill, Richard D and Groeneboom, Piet and De Jong, Peter},
+  journal={Chance},
+  volume={31},
+  number={4},
+  pages={9--15},
+  year={2018},
+  url={https://diamhomes.ewi.tudelft.nl/~pgroeneboom/Lucia_Chance.pdf},
+  publisher={Taylor \& Francis}
+}
 
+@misc{wiki:luciadeberg,
+  author = {{Lucia de Berk case}},
+  title = {Lucia de Berk case --- {W}ikipedia{,} The Free Encyclopedia},
+  url = {https://en.wikipedia.org/wiki/Lucia_de_Berk_case},
+  year = {2025}
+}
+
+@movie{luciadeb2014,
+  title = {Lucia de B.},
+  producer= {Moniek Kramer AND Tijs van Marle},     
+  director = {Paula van der Oest},
+  year = {2014},
+  publisher = {Rinkel Film}
+}
