with tcolorbox and pretty cards with numbers

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -105,6 +105,7 @@
 
 \usepackage{xcolor}
 \usepackage{framed} % для рамок и черты слева от минитеории, \leftbar
+\usepackage[theorems, breakable]{tcolorbox} % больше рамок :)
 
 % \usepackage{float, longtable}
 \usepackage{soulutf8}
@@ -921,6 +922,137 @@ p_{30} = \frac{364}{365}\cdot\frac{363}{365}\cdot\ldots\cdot\frac{332}{336}\appr
   \end{sol}
 \end{problem}
 
+
+
+\begin{problem}
+На $100$ карточках написаны числа от $1$ до $100$.
+Я случайным образом выбираю $k$ из них и считаю сумму полученных чисел. 
+
+\begin{enumerate}
+  \item Не находя точные вероятности, для каждого $k$ определите, какая сумма более вероятна, чётная или нечётная.
+  \item Найдите для каждого $k$ точные вероятности чётной и нечётной суммы. 
+\end{enumerate}
+  \begin{sol}
+  Решение через симметрии\addtag{симметрия!с исключениями} с исключениями. 
+  Заменим в исходной колоде все чётные числа на нечётные и наоборот. 
+  При этом, конечно, задача никак не изменится и вероятность того, что сумма карт на руках — чётная, должна сохраниться. 
+  Что при этом произойдйт в комбинации на руках?
+
+  Сначала рассмотрим случай, когда у нас на руках было нечётное число карт, скажем, $7$ карт. 
+  Каждая нечётная карта станет чётной, а каждая чётная — нечётной, например,
+  \[
+  0000111, S=3 \leftrightarrow 1111000, S=4
+  \]
+  При этом чётная сумма перейдёт в нечётную сумму, а нечётная сумма — в чётную. 
+  В силу аргумента о сохранении вероятностей, вероятности чётной и нечётной суммы равны. 
+
+  Теперь рассмотрим случай, когда у нас на руках было чётное число карт, скажем, $6$ карт. 
+  Например,
+  \[
+     000011, S=2 \leftrightarrow 111100, S=4.
+  \]
+  Хм, чётность суммы не изменилась, вероятность, естественно, сохраняется. 
+  Кажется, что мы в тупике.
+  Попробуем найти такую симметрию или почти-симметрию, которая будет всё-таки переводить нечётные варианты в чётные и наоборот. 
+
+  Например, можно разбить все карточки на пары, $1 \leftrightarrow 2$, $3 \leftrightarrow 4$, \dots, $99 \leftrightarrow 100$, 
+  и чтобы гарантированно изменить чётность, делать только одну подмену, скажем, внутри наименьшей пары, в которой выбрано единственное число. 
+  При таком правиле, в частности, 
+  \[
+  123568 \leftrightarrow 124568, 125689 \leftrightarrow 125679.
+  \]
+  Эта почти-симметрия переводит нечётные комбинации в чётные, и наоборот, но есть исключения.
+  Почти-симметрия не применима к комбинациям, где все пары — полные,
+  \[
+    123456 \leftrightarrow ?, 345678 \leftrightarrow ?
+  \]
+  И мы видим, что все чётные и нечётные варианты разбились на пары, кроме «лишних» вариантов с полными парами, которые для $k=6$ даёт нечётную сумму.
+  Отсюда, при $k=6$ вероятность нечётной суммы выше, чем чётной суммы. 
+
+  При $k = 8$ «лишние» варианты, для которых почти-симметрия не определена, дадут чётную сумму.
+  
+  Следовательно, при $k = 4m$ вероятнось чётной суммы выше, а при $k = 4m + 2$ вероятность нечётной суммы выше. 
+
+  Если бы «лишние» варианты делились поровну, то вероятность чётной суммы была бы ровно $1/2$.
+  Следовательно, перевес или недовес вероятности чётности над $1/2$ порождён половиной «лишних» вариантов.
+  Заметим, что для формирования «лишнего» варианта мы набираем $k/2$ полных пар, то есть, «лишних» вариантов ровно $C_{50}^{k/2}$.
+  Отсюда можно установить, что 
+  \[
+    \begin{cases}
+    \P(\text{сумма }4m\text{ чисел — чётная}) = \frac{1}{2} +  \frac{C_{50}^{2m}}{2C_{100}^k}  \\
+    \P(\text{сумма }4m + 2\text{ чисел — чётная})=  \frac{1}{2} - \frac{C_{50}^{2m + 1}}{2C_{100}^k}
+    \end{cases}
+  \]
+  Есть несколько прикольных видео «Proofs to DIE for» про нахождение почти-симметрий, \autocite{} и \autocite{}.
+
+  Решение через слова\addtag{слова как функции}. 
+  \tcbset{height=9mm,left=1mm,right=1mm}
+  Рассмотрим все слова, которые обозначают произвольный набор из исходного множества карточек. 
+  \[
+    S = \left(\tcbhighmath[left=3mm]{ } + \tcbhighmath{1}\right)\cdot \left(\tcbhighmath[left=3mm]{ } + \tcbhighmath{2}\right) \cdot \ldots \cdot \left(\tcbhighmath[left=3mm]{ } + \tcbhighmath{100}\right).
+  \]
+  Пустой квадратик означает, что мы не берём карточку и при умножении пустого квадратика его можно просто пропускать. 
+
+  Если $S$ разложить в сумму, то, например, там будет слагаемое $\tcbhighmath{2}\tcbhighmath{5}$, которое означает, что мы берём карточки $2$ и $5$, а остальные — не берём. 
+  \[
+    S = \tcbhighmath[left=3mm]{ } + \tcbhighmath{1} + \ldots  + \tcbhighmath{2}\tcbhighmath{5} + \ldots + \tcbhighmath{1}\tcbhighmath{2}\cdot \ldots \cdot \tcbhighmath{100}.
+  \]
+  Нам нужно следить за количеством чётных и нечётных чисел, поэтому заменим все нечётные на букву $d$ (odd),
+  а все чётные карточки — на букву $e$ (even). 
+  Пустую карточку заменим на единицу. 
+  \[
+    S = (1 + d)^{50}(1 + e)^{50}.
+  \]
+  При разложении $S$ в сумму коэффициенты означают количество вариантов, 
+  \[
+  S = 1 + 50 e + 50 d + 2500 ed + \ldots + e^{50}d^{50},
+  \]
+  например, $50e$ означает $50$ вариантов взять одну чётную карточку,
+  а $2500ed$ означает $2500$ вариантов взять одну чётную и одну нечётную карточку. 
+
+  При каких условиях сумма на карточках будет чётной? 
+  Если и только если число нечётных карточек, кодируемое степенью $d$, будет чётным. 
+
+  Как нам посчитать преимущество количества чётных сумм над количеством нечётных сумм?
+  Хм, внезапно, вычесть одно из другого. 
+  Отсюда мы приходим к мысли, что нам нужно перед слагаемыми с нечётной степенью $d$ поставить знак минус. 
+  Этого можно добиться, рассмотрев подстановку $d = -e$, при этом степень $e$ будет означать количество взятых карт,
+  \[
+     S = (1 - d)^{50} (1 + d)^{50} = (1 - d^2)^{50} = \sum_{j = 0}^{50} (-1)^j C_{50}^j e^{2j}.
+  \]
+  Если снова разложить $S$ в сумму, то коэффициенты играют роль преимуществ количества чётных сумм над нечётными суммами!
+  \[
+    S = 1 - C_{50}^1 e^2 + C_{50}^2 e^4 - \ldots + C_{50}^{50} e^{100}.
+  \]
+  Например, если мы хотим взять две карты ($e^2$), то разница число вариантов с чётной суммой минус число вариантов с нечётной суммой равна $-50$.
+
+  Отсюда мы снова видим, что при нечётном числе карт (нечётной степени при $e$) разница количества чётных и нечётных сумм равна нулю,
+  то есть при нечётном $k = 2j + 1$ чётные и нечётные суммы равновероятны,
+   \[
+  \P(\text{сумма }2j + 1 \text{ чисел — чётная}) = \frac{1}{2}.
+  \]
+  Немного бухгалтерии для чётного $k = 2j$:
+  \[
+    \begin{cases}
+      N_{\text{even}} + N_{\text{odd}} = C_{100}^k = C_{100}^{2j} \\
+      N_{\text{even}} - N_{\text{odd}} = (-1)^j C_{50}^j.
+    \end{cases}
+  \]
+  \[
+  \P(\text{сумма }2j\text{ чисел — чётная}) = \frac{N_{\text{even}}}{N_{\text{even}} + N_{\text{odd}}} = \frac{1}{2} - (-1)^j\frac{C_{50}^j}{2C_{100}^{2j}}.
+  \]
+
+  Не совсем решение, но хорошая догадка до верного ответа. 
+  Рассмотрим случайную величину $X$ — количество нечётных карт в раздаче. 
+  Она имеет симметричное относительно ожидания гипергеометрическое распределение потому, что ровно половина исходных карточек — нечётные. 
+  Величина $X$ принимает значения $0$, $1$, \ldots, $k$.  
+  Если $k$ — нечётное, то у $X$ — чётное число возможных значений, мы наблюдаем полную симметрию и $\P(X \text{ — чётное}) = 1/2$.
+  Если же $k$ — нечётное, то интуитивно можно предположить (но это лишь догадка!), что центральное значение $X$ будет иметь преимущество
+  и наиболее вероятная чётность суммы совпадёт с чётностью центрального значения $X$.  
+  При $k = 4k$ центральное значение $X$ будет чётным, при $k = 4k + 2$ — нечётным. 
+  Ответ выходит верный, возможно догадку можно как-то довести до ещё одного полноценного доказательства.
+  \end{sol}
+\end{problem}
 
 
 
@@ -4122,6 +4254,7 @@ $\E(X)=9$, $\Var(X)=1.2$
   \item У кого выше вероятность найти спелое яблоко первым?
   \item Сколько яблок в среднем попробует Крош, когда обнаружит первое сладкое?
   \item Сколько яблок в среднем попробует Ёжик, когда обнаружит первое сладкое?
+  \item В каком порядке стоит проверять яблони Крошу, чтобы максимизировать вероятность обыграть Ёжика?
   \item Как изменятся ответы, если созрела только одна яблоня?
 \end{enumerate}
 
@@ -4139,6 +4272,9 @@ $\E(X)=9$, $\Var(X)=1.2$
   \]
   \item $(15 - 2) / 3 + 1 = 16/3$
   \item $(15 - 2) / 3 + 1 = 16/3$
+  \item Крошу нужно стараться быть на ход впереди Ёжика.
+  То есть сначала проверить яблоню номер 2 в нумерации Ёжика, потом яблоню номер 3 и так далее.
+  При такой стратегии Крош проиграет, только если первая яблоня будет созревшей, вероятность выигрыша Кроша будет равна $1 - 2/15 = 13/15$.
   \item Вероятность ничьей будет равна $3/15$, вероятности победы будут равны по $6/15$, ожидаемое число съеденных яблок каждым игроком будет равно $(15 - 1) / 2 + 1 = 8$.
 \end{enumerate}
 
@@ -5834,7 +5970,34 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 
 
 
-% TODO: add berry-esseen
+\begin{problem}
+Прапорщик объясняет рядовым способ получения стандартного нормального распределения: 
+
+— Берём двенадцать независимых равномерных на отрезке ноль-один величин. 
+Складываем. Вычитаем шесть. Вопросы есть?
+
+— Товарищ прапорщик, а можно тринадцать величин сложить?
+
+— Не положено. 
+
+\begin{enumerate}
+  \item Объясните данный механизм генерации стандартного нормального распределения.
+  \item Почему, всё-таки, не стоит брать тринадцать величин?
+\end{enumerate}
+
+\begin{sol}
+  \begin{enumerate}
+    \item Ожидание данной суммы равно нулю, а дисперсия — в точности единице. 
+    В силу центральной предельной теоремы распределение очень похоже на нормальное, 
+    но идеально нормальным не является. 
+    \item Если взять тринадцать слагаемых, то нормировка теряет элегантность. 
+    Пришлось бы вычитать $6.5$ и делить на $\sqrt{13/12}$.
+  \end{enumerate}
+\end{sol}
+\end{problem}
+
+% TODO: add berry-esseen, 
+% TODO: add edgeworth
 
 
 
