old misprint corrected, closes #14

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -697,7 +697,7 @@ P(N=3) = \frac{1}{2}\cdot\frac{2}{3}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{2}{
 
 \begin{flalign*}
 & \P(X=0) = \P(\text{PPP}) = \frac{1}{2}\cdot\frac{1}{2}\cdot\frac{1}{2} = \frac{1}{8}\\
-& \P(X=1) = \P(\text{OO}) + \P(\text{POP}) + \P(\text{PPO}) = \frac{1}{2}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{1}{2}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{1}{2}\cdot\frac{1}{2} = \frac{1}{2}\\
+& \P(X=1) = \P(\text{OP}) + \P(\text{POP}) + \P(\text{PPO}) = \frac{1}{2}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{1}{2}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{1}{2}\cdot\frac{1}{2} = \frac{1}{2}\\
 & \P(X=2) = \P(\text{OO}) + \P(\text{POO}) = \frac{1}{2}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{1}{2}\cdot\frac{1}{2} = \frac{3}{8}
 \end{flalign*}
 
